--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
   "name": "a1.3",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
-  },  
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "next": "^12.0.8",
+    "next": "^12.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/arthurdev93/nextjs-alura02.git"
+  },
+  "bugs": {
+    "url": "https://github.com/arthurdev93/nextjs-alura02/issues"
+  },
+  "homepage": "https://github.com/arthurdev93/nextjs-alura02#readme",
+  "description": ""
 }
